home page created

--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Ali Duman</title>
+    <meta charset="UTF-8">
+    <title>Ali Duman</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&amp;subset=latin-ext" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Ali DUMAN - Front End Developer</h1>
+
+<div class="container h-100">
+    <div class="col-12 h-100 d-flex flex-column justify-content-center align-items-start">
+		<h1 id="name" class="animated  fadeInLeft">Ali Duman</h1>
+        <h2 id="title" class="animated  fadeInLeft">Front End Developer</h2>
+
+        <ul class="nav">
+            <li class="facebook animated fadeInRight">
+                <a href="https://www.facebook.com/aliduman.dev" title="facebook">
+                    <img src="images/facebook.svg" alt="facebook">
+                </a>
+            </li>
+            <li class="twitter animated fadeInRight">
+                <a href="https://twitter.com/alidumandev" title="twitter">
+                    <img src="images/twitter.svg" alt="twitter">
+                </a>
+            </li>
+            <li class="linkedin animated fadeInRight">
+                <a href="https://www.linkedin.com/in/ali-duman-904b2731/" title="linkedin">
+                    <img src="images/linkedin.svg" alt="linkedin">
+                </a>
+            </li>
+            <li class="wordpress animated fadeInRight">
+                <a href="https://alidumandev.wordpress.com/" title="wordpress">
+                    <img src="images/wordpress.svg" alt="wordpress">
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
 </body>
 </html>
